--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,23 +18,15 @@
     HERO ANIMATION
  */
 
-.hero-is-flying{
-    animation: hero-is-flying linear 2s;
-    animation-iteration-count: infinite;
-    transform-origin: 50% 50%;
+
+.hero-go-left {
+    transform:  rotate(-15deg);
 }
 
-@keyframes hero-is-flying{
-    0% {
-        transform:  rotate(0deg) ;
-    }
-    50% {
-        transform:  rotate(7deg) ;
-    }
-    100% {
-        transform:  rotate(0deg) ;
-    }
+.hero-go-right {
+    transform:  rotate(15deg);
 }
+
 
 .hero-is-shoot{
     animation: hero-is-shoot linear 0.5s;
