--- a/assets/css/backgounds.css
+++ b/assets/css/backgounds.css
@@ -5,26 +5,7 @@
 body {
     margin: 0;
     padding: 0;
-}
-
-.content {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 960px;
-    padding: 0 15px;
-}
-
-h1 {
-    margin: 60px 0;
-    padding: 0;
-    font-size: 50px;
-    text-align: center;
-}
-
-p {
-    margin: 0 0 30px 0;
-    font-size: 30px;
-    line-height: 1.5;
+    background: #000;
 }
 
 .fullscreen-bg {
