--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ img {
     max-width: 100%;
 }
 
-#terminal{
+.terminal{
     position: absolute;
     right: 20px;
     bottom: 20px;
@@ -20,15 +20,17 @@ img {
     padding: 5px;
 }
 
-#terminal p {
+.terminal #cmds {
     color: #fff;
-    font-size: 12px;
+    font-size: 13px;
     min-height: 145px;
     position: absolute;
     bottom: 0;
     margin: 0;
 }
-
+.terminal p{
+    margin: 0;
+}
 /*
     HERO STYLE
  */
