--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,84 @@ img {
 }
 
 /*
+ANIMATIONS
+ */
+
+.tada-animation{
+    animation: tadaFrames linear 1s;
+    animation-iteration-count: infinite;
+    transform-origin: 50% 50%;
+}
+
+@keyframes tadaFrames{
+    0% {
+        transform:  rotate(0deg) scaleX(1.00) scaleY(1.00) ;
+    }
+    10% {
+        transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+    }
+    20% {
+        transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+    }
+    30% {
+        transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+    }
+    40% {
+        transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+    }
+    50% {
+        transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+    }
+    60% {
+        transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+    }
+    70% {
+        transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+    }
+    80% {
+        transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+    }
+    90% {
+        transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+    }
+    100% {
+        transform:  rotate(0deg) scaleX(1.20) scaleY(1.20) ;
+    }
+}
+
+.woble-animation{
+    animation: wobleFrames linear 1s;
+    animation-iteration-count: infinite;
+    transform-origin: 50% 50%;
+}
+
+@keyframes wobleFrames{
+    0% {
+        transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+    15% {
+        transform:  translate(-25px,0px)  rotate(-5deg) ;
+    }
+    30% {
+        transform:  translate(20px,0px)  rotate(3deg) ;
+    }
+    45% {
+        transform:  translate(-15px,0px)  rotate(-3deg) ;
+    }
+    60% {
+        transform:  translate(10px,0px)  rotate(2deg) ;
+    }
+    75% {
+        transform:  translate(-5px,0px)  rotate(-1deg) ;
+    }
+    100% {
+        transform:  translate(0px,0px)  rotate(0deg) ;
+    }
+}
+
+
+
+/*
     ENEMY
  */
 .explode {
@@ -102,3 +180,6 @@ img {
         background-position: -1600px 0;
     }
 }
+
+
+
