--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@ img {
     max-width: 100%;
 }
 
-.terminal{
+.terminal {
     position: absolute;
     right: 20px;
     bottom: 20px;
@@ -28,9 +28,11 @@ img {
     bottom: 0;
     margin: 0;
 }
-.terminal p{
+
+.terminal p {
     margin: 0;
 }
+
 /*
     HERO STYLE
  */
@@ -44,10 +46,7 @@ img {
     opacity: 0.9;
 }
 
-.laser {
-    position: absolute;
-}
-.enemy {
+.laser, .exir, .enemy {
     position: absolute;
 }
 
@@ -55,92 +54,161 @@ img {
     HERO ANIMATION
  */
 
-
 .hero-go-left {
-    transform:  rotate(-15deg);
+    transform: rotate(-15deg);
 }
 
 .hero-go-right {
-    transform:  rotate(15deg);
+    transform: rotate(15deg);
 }
 
 /*
 ANIMATIONS
  */
 
-.tada-animation{
+.tada-animation {
     animation: tadaFrames linear 1s;
     animation-iteration-count: infinite;
     transform-origin: 50% 50%;
 }
 
-@keyframes tadaFrames{
+@keyframes tadaFrames {
     0% {
-        transform:  rotate(0deg) scaleX(1.00) scaleY(1.00) ;
+        transform: rotate(0deg) scaleX(1.00) scaleY(1.00);
     }
     10% {
-        transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+        transform: rotate(-3deg) scaleX(0.80) scaleY(0.80);
     }
     20% {
-        transform:  rotate(-3deg) scaleX(0.80) scaleY(0.80) ;
+        transform: rotate(-3deg) scaleX(0.80) scaleY(0.80);
     }
     30% {
-        transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
     }
     40% {
-        transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+        transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
     }
     50% {
-        transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
     }
     60% {
-        transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+        transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
     }
     70% {
-        transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
     }
     80% {
-        transform:  rotate(-3deg) scaleX(1.20) scaleY(1.20) ;
+        transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
     }
     90% {
-        transform:  rotate(3deg) scaleX(1.20) scaleY(1.20) ;
+        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
     }
     100% {
-        transform:  rotate(0deg) scaleX(1.20) scaleY(1.20) ;
+        transform: rotate(0deg) scaleX(1.20) scaleY(1.20);
     }
 }
 
-.woble-animation{
+.woble-animation {
     animation: wobleFrames linear 1s;
     animation-iteration-count: infinite;
     transform-origin: 50% 50%;
 }
 
-@keyframes wobleFrames{
+@keyframes wobleFrames {
     0% {
-        transform:  translate(0px,0px)  rotate(0deg) ;
+        transform: translate(0px, 0px) rotate(0deg);
     }
     15% {
-        transform:  translate(-25px,0px)  rotate(-5deg) ;
+        transform: translate(-25px, 0px) rotate(-5deg);
     }
     30% {
-        transform:  translate(20px,0px)  rotate(3deg) ;
+        transform: translate(20px, 0px) rotate(3deg);
     }
     45% {
-        transform:  translate(-15px,0px)  rotate(-3deg) ;
+        transform: translate(-15px, 0px) rotate(-3deg);
     }
     60% {
-        transform:  translate(10px,0px)  rotate(2deg) ;
+        transform: translate(10px, 0px) rotate(2deg);
     }
     75% {
-        transform:  translate(-5px,0px)  rotate(-1deg) ;
+        transform: translate(-5px, 0px) rotate(-1deg);
     }
     100% {
-        transform:  translate(0px,0px)  rotate(0deg) ;
+        transform: translate(0px, 0px) rotate(0deg);
     }
 }
 
+.shake-animation {
+    animation: shakeFrames linear 1s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+}
 
+@keyframes shakeFrames {
+    0% {
+        transform: translate(0px, 0px);
+    }
+    10% {
+        transform: translate(-10px, 0px);
+    }
+    20% {
+        transform: translate(10px, 0px);
+    }
+    30% {
+        transform: translate(-10px, 0px);
+    }
+    40% {
+        transform: translate(10px, 0px);
+    }
+    50% {
+        transform: translate(-10px, 0px);
+    }
+    60% {
+        transform: translate(10px, 0px);
+    }
+    70% {
+        transform: translate(-10px, 0px);
+    }
+    80% {
+        transform: translate(10px, 0px);
+    }
+    90% {
+        transform: translate(-10px, 0px);
+    }
+    100% {
+        transform: translate(0px, 0px);
+    }
+}
+
+.bounce-animation {
+    animation: bounceFrames linear 0.8s;
+    animation-iteration-count: infinite;
+    transform-origin: 50% 50%;
+}
+
+@keyframes bounceFrames {
+    0% {
+        transform: translate(0px, 0px);
+    }
+    15% {
+        transform: translate(0px, -25px);
+    }
+    30% {
+        transform: translate(0px, 0px);
+    }
+    45% {
+        transform: translate(0px, -15px);
+    }
+    60% {
+        transform: translate(0px, 0px);
+    }
+    75% {
+        transform: translate(0px, -5px);
+    }
+    100% {
+        transform: translate(0px, 0px);
+    }
+}
 
 /*
     ENEMY
