--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,95 +5,28 @@
 img {
     max-width: 100%;
 }
-.heart {
-	font-size: 100px;
-	text-align: center;
+
+#score {
     position: absolute;
-	color: rgba(165, 25, 25, 1);
-	padding: 0;
-	margin: 0;
+    left: 30px;
+    top: 30px;
+    color: #fff;
+    font-size: 30px;
+    font-weight: bold;
 }
 
-.pulse2 {
-	-webkit-animation: pulse2 1s linear infinite;
-	-moz-animation: pulse2 1s linear infinite;
-	-ms-animation: pulse2 1s linear infinite;
-	animation: pulse2 1s linear infinite;
+#hearts {
+    position: absolute;
+    right: 20px;
+    top: 20px;
 }
 
-@keyframes "pulse2" {
- 0% {
-    -webkit-transform: scale(1.1);
-   	-moz-transform: scale(1.1);
-   	-o-transform: scale(1.1);
-   	-ms-transform: scale(1.1);
-   	transform: scale(1.1);
- }
- 50% {
-    -webkit-transform: scale(0.8);
-   	-moz-transform: scale(0.8);
-   	-o-transform: scale(0.8);
-   	-ms-transform: scale(0.8);
-   	transform: scale(0.8);
- }
- 100% {
-    -webkit-transform: scale(1);
-   	-moz-transform: scale(1);
-   	-o-transform: scale(1);
-   	-ms-transform: scale(1);
-   	transform: scale(1);
- }
-
+.heart {
+    font-size: 50px;
+    color: #a51919;
+    display: inline-block;
+    margin-left: 5px;
 }
-
-@-moz-keyframes pulse2 {
- 0% {
-   -moz-transform: scale(1.1);
-   transform: scale(1.1);
- }
- 50% {
-   -moz-transform: scale(0.8);
-   transform: scale(0.8);
- }
- 100% {
-   -moz-transform: scale(1);
-   transform: scale(1);
- }
-
-}
-
-@-webkit-keyframes "pulse2" {
- 0% {
-   -webkit-transform: scale(1.1);
-   transform: scale(1.1);
- }
- 50% {
-   -webkit-transform: scale(0.8);
-   transform: scale(0.8);
- }
- 100% {
-   -webkit-transform: scale(1);
-   transform: scale(1);
- }
-
-}
-
-@-ms-keyframes "pulse2" {
- 0% {
-   -ms-transform: scale(1.1);
-   transform: scale(1.1);
- }
- 50% {
-   -ms-transform: scale(0.8);
-   transform: scale(0.8);
- }
- 100% {
-   -ms-transform: scale(1);
-   transform: scale(1);
- }
-
-}
-
 
 .terminal {
     position: absolute;
@@ -122,6 +55,18 @@ img {
     margin: 0;
 }
 
+.terminal .white {
+    color: #fff;
+}
+
+.terminal .red {
+    color: #ff3d3d;
+}
+
+.terminal .green {
+    color: #00ff2f
+}
+
 #weapons_list {
     position: absolute;
     left: 30px;
@@ -129,7 +74,7 @@ img {
     z-index: 99999;
 }
 
-#weapons_list ul{
+#weapons_list ul {
     list-style: none;
     margin: 0;
     padding: 0;
@@ -143,15 +88,62 @@ img {
     padding-bottom: 5px;
 }
 
-#weapons_list ul li.current{
-    border-bottom:2px solid #fff;
+#weapons_list ul li.current {
+    border-bottom: 2px solid #fff;
 }
 
-#weapons_list ul li img{
+#weapons_list ul li img {
     width: 24px;
     height: 24px;
     vertical-align: middle;
     margin-right: 5px;
+}
+
+#pause {
+    display: none;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    overflow: hidden;
+    z-index: 999999;
+
+    background: #1b181a url("../images/backgrounds/classic-pause.png") no-repeat center center;
+    color: #fff;
+}
+
+#pause .pausetext {
+    position: absolute;
+    bottom: 50px;
+    width: 100%;
+    text-align: center;
+}
+
+
+#levelinfo {
+    display: none;
+
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    overflow: hidden;
+    z-index: 999999;
+
+    background: #1b181a url("../images/backgrounds/happy-penguin.png") no-repeat center 100px;
+    color: #fff;
+}
+
+#levelinfo .leveltext {
+    position: absolute;
+    bottom: 100px;
+    width: 100%;
+    text-align: center;
 }
 
 
@@ -184,142 +176,31 @@ img {
     transform: rotate(15deg);
 }
 
-/*
-ANIMATIONS
- */
-
-.tada-animation {
-    animation: tadaFrames linear 1s;
-    animation-iteration-count: infinite;
-    transform-origin: 50% 50%;
-}
-
-@keyframes tadaFrames {
-    0% {
-        transform: rotate(0deg) scaleX(1.00) scaleY(1.00);
-    }
-    10% {
-        transform: rotate(-3deg) scaleX(0.80) scaleY(0.80);
-    }
-    20% {
-        transform: rotate(-3deg) scaleX(0.80) scaleY(0.80);
-    }
-    30% {
-        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
-    }
-    40% {
-        transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
-    }
-    50% {
-        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
-    }
-    60% {
-        transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
-    }
-    70% {
-        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
-    }
-    80% {
-        transform: rotate(-3deg) scaleX(1.20) scaleY(1.20);
-    }
-    90% {
-        transform: rotate(3deg) scaleX(1.20) scaleY(1.20);
-    }
-    100% {
-        transform: rotate(0deg) scaleX(1.20) scaleY(1.20);
-    }
-}
-
-.woble-animation {
-    animation: wobleFrames linear 1s;
-    animation-iteration-count: infinite;
-    transform-origin: 50% 50%;
-}
-
-@keyframes wobleFrames {
-    0% {
-        transform: translate(0px, 0px) rotate(0deg);
-    }
-    15% {
-        transform: translate(-25px, 0px) rotate(-5deg);
-    }
-    30% {
-        transform: translate(20px, 0px) rotate(3deg);
-    }
-    45% {
-        transform: translate(-15px, 0px) rotate(-3deg);
-    }
-    60% {
-        transform: translate(10px, 0px) rotate(2deg);
-    }
-    75% {
-        transform: translate(-5px, 0px) rotate(-1deg);
-    }
-    100% {
-        transform: translate(0px, 0px) rotate(0deg);
-    }
-}
-
-.shake-animation {
-    animation: shakeFrames linear 1s;
-    animation-iteration-count: 1;
-    transform-origin: 50% 50%;
-}
-
-@keyframes shakeFrames {
-    0% {
-        transform: translate(0px, 0px);
-    }
-    10% {
-        transform: translate(-10px, 0px);
-    }
-    20% {
-        transform: translate(10px, 0px);
-    }
-    30% {
-        transform: translate(-10px, 0px);
-    }
-    40% {
-        transform: translate(10px, 0px);
-    }
-    50% {
-        transform: translate(-10px, 0px);
-    }
-    60% {
-        transform: translate(10px, 0px);
-    }
-    70% {
-        transform: translate(-10px, 0px);
-    }
-    80% {
-        transform: translate(10px, 0px);
-    }
-    90% {
-        transform: translate(-10px, 0px);
-    }
-    100% {
-        transform: translate(0px, 0px);
-    }
-}
-
-.bounce-animation {
-    animation: bounceFrames linear 0.8s;
-    animation-iteration-count: infinite;
-    transform-origin: 50% 50%;
-}
-
 .monster-rotate {
 
-    -webkit-animation:spin 0.5s linear infinite;
-    -moz-animation:spin 0.5s linear infinite;
-    animation:spin 0.5s linear infinite;
+    -webkit-animation: spin 0.5s linear infinite;
+    -moz-animation: spin 0.5s linear infinite;
+    animation: spin 0.5s linear infinite;
 }
 
-@-moz-keyframes spin { 100% { -moz-transform: rotateY(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotateY(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotateY(360deg); transform:rotateY(360deg); } }
+@-moz-keyframes spin {
+    100% {
+        -moz-transform: rotateY(360deg);
+    }
+}
 
+@-webkit-keyframes spin {
+    100% {
+        -webkit-transform: rotateY(360deg);
+    }
+}
 
+@keyframes spin {
+    100% {
+        -webkit-transform: rotateY(360deg);
+        transform: rotateY(360deg);
+    }
+}
 
 @keyframes bounceFrames {
     0% {
