--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,9 +1,4 @@
 html {
-    background: url('../images/backgrounds/pen.jpg')  no-repeat center center fixed;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
 
 
 }
@@ -23,6 +18,20 @@ html , body{
   MENU STYLE
 
 */
+#menu-div {
+  position: absolute;
+    left: 0px;
+    top: 0px;
+  z-index:999999999 ;
+  width:100%;
+  height:100%;
+  background: url('../images/backgrounds/pen.jpg')  no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+
+}
 #menu ul {
     position:absolute;
     right:10%;
