setup control to all audio objects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,14 @@ img {
   font-weight: bold;
 }
 
+#sound-setting{
+  position: absolute;
+  left: 30px;
+  top: 100px;
+  width: 40px;
+}
+
+
 #hearts {
     position: absolute;
     right: 20px;
